--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
