--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.7",
+    "pdfmake-fonts": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
@@ -25,6 +29,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/pdfmake": "^0.2.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
